--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ h1{color:white;
    font-size: 30px;
    background-color: #FF7F50;
    text-align: center;
+   font-family: Fuentes/DancingScript-VariableFont_wght.ttf;
 }
 html{
   background-color: #FFE4C4;
