--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1{color:white;
    font-family: Dancing Script;
 }
 #bienvenida{
-  background-color: ;
+  background-color:#8FBC8F ;
 }
 html{
   background-color: #FFE4C4;
