--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{color:white;
   background-color:#8FBC8F ;
   text-align: justify;
   font-weight: 700;
-  padding: 10px;
+  padding: 3%;
   margin: 20px;
 }
 html{
