--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ h1{color:white;
   margin: 20px;
   font-family:'Handlee', cursive;
 }
+#navegacion{
+  background-color: ;
+}
 html{
   background-color: #FFE4C4;
 }
