--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1{color:white;
   font-family:'Handlee', cursive;
 }
 #navegacion{
-  background-color: ;
+  background-color: #00FFFF;
 }
 html{
   background-color: #FFE4C4;
