--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{color:white;
 }
 #navegacion{
   background-color: #00FFFF;
-  text-align: justify;
+  text-align: center;
   padding-left: 3%;
   padding-right: 3%;
   padding-bottom: 1%;
