--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 
 h1{color:white;
    font-size: 50px;
@@ -21,6 +22,8 @@ h1{color:white;
 }
 #navegacion{
   background-color: #00FFFF;
+  font-family: Handlee;
+  font-weight: 700;
   text-align: center;
   padding-left: 3%;
   padding-right: 3%;
