--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 
+html{
+   scroll-behavior:smooth;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 h1{color:white;
    font-size: 50px;
    background-color: #FF7F50;
@@ -13,10 +23,7 @@ h1{color:white;
   background-color:#8FBC8F ;
   text-align: justify;
   font-weight: 700;
-  padding-left: 3%;
-  padding-right: 3%;
-  padding-bottom: 1%;
-  padding-top: 1%;
+  padding: 2%; 
   margin: 20px;
   font-family:'Handlee', cursive;
 }
