--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ h1{color:white;
   margin: 20px;
   
 }
+#navegacion a{
+  padding: ;
+}
 #navegacion>a:hover{
   color: #00FFFF;
   background-color: white;
