--- a/style.css
+++ b/style.css
@@ -42,7 +42,9 @@ h1{color:white;
 #navegacion a{
   padding: 10px;
 }
-
+  #navegacion #barra_nav li{
+    list-style-type: none ;
+  }
   #navegacion>a:hover{
     color: #00FFFF;
     background-color: white;
