--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ h1{color:white;
     color: #00FFFF;
     background-color: white;
   }
+  #navegacion #barra_nav li>a:active{
+    color: #00FFFF;
+    background-color: white;
+  }
     #navegacion #barra_nav li>a{
       text-decoration: none;
     }
