--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html{
     box-sizing: border-box;
 }
 
-h1{color:white;
+header{color:white;
    font-size: 50px;
    background-color: #FF7F50;
    text-align: center;
@@ -61,4 +61,24 @@ h1{color:white;
     }
 html{
   background-color: #FFE4C4;
+}
+
+.grid-container {
+    display: grid;
+    grid-gap: 10px;
+}
+
+.caja {
+    width: 100%;
+    height: 100px;
+    background-color: lightblue;
+    border: 1px solid blue;
+    text-align: center;
+    line-height: 100px;
+}
+
+@media (min-width: 768px) {
+    .grid-container {
+        grid-template-columns: 1fr 1fr;
+    }
 }
