--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html{
     box-sizing: border-box;
 }
 
-header{color:white;
+h1{color:white;
    font-size: 50px;
    background-color: #FF7F50;
    text-align: center;
