--- a/style.css
+++ b/style.css
@@ -15,10 +15,16 @@ html{
 
 h1{color:white;
    font-size: 50px;
-   background-color: #FF7F50;
+   /* background-color: #FF7F50;*/
    text-align: center;
    font-family: Dancing Script;
 }
+header{
+  background-image: imagenes/Portada-1080x657.jpg;
+  bac
+  
+}
+
 #bienvenida{
   background-color:#8FBC8F ;
   text-align: justify;
