--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
     box-sizing: border-box;
 }
 
-h1{color:white;
+h1{color:black;
    font-size: 50px;
    /* background-color: #FF7F50;*/
    text-align: center;
