--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ html{
     box-sizing: border-box;
 }
 
-h1{color:black;
+h1{color:white;
    font-size: 50px;
+   font-weight: bold;
    /* background-color: #FF7F50;*/
    text-align: center;
    font-family: Dancing Script;
