--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ h1{color:white;
 
 @media (max-width: 768px) {
   h1{
-      font-size: 2%; /* Reduzca el tamaño de fuente para dispositivos móviles */
+      font-size: 16px; /* Reduzca el tamaño de fuente para dispositivos móviles */
+      line-height: 1;
   }
 }
 header{
