--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h1{color:white;
 @media (max-width: 768px) {
   h1{
       font-size: 16px; /* Reduzca el tamaño de fuente para dispositivos móviles */
-      line-height: 1;
+      line-height: 4;
   }
 }
 header{
@@ -76,8 +76,6 @@ header{
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
     grid-gap: 10px;
 }
 
@@ -90,8 +88,8 @@ header{
     line-height: 100px;
 }
 
-@media (min-width: 768px) {
-    .grid-container {
-        grid-template-columns: 1fr 1fr;
-    }
+@media (max-width: 767px) {
+  .grid-container {
+      grid-template-columns: 1fr;
+  }
 }
