--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
     box-sizing: border-box;
 }
 
-h1{color:white;
+h1{color:#FCFF33;
    font-size: 50px;
    font-weight: bold;
    /* background-color: #FF7F50;*/
@@ -32,6 +32,30 @@ header{
   background-image: url('imagenes/Portada-1080x675.jpg');
   background-size: cover;
 }
+
+#barra_nav {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+}
+
+#barra_nav li {
+  text-align: center;
+  border: 1px solid blue;
+  background-color: lightblue;
+  padding: 10px;
+}
+
+@media (min-width: 768px) {
+  #barra_nav {
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+  }
+}
+
 
 #bienvenida{
   background-color:#8FBC8F ;
