--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html{
     box-sizing: border-box;
 }
 
-h1{color:#FCFF33;
+h1{color:white;
    font-size: 50px;
    font-weight: bold;
    /* background-color: #FF7F50;*/
