--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1{color:white;
   }
 }
 header{
-  background-image: url('imagenes/Portada-1080x675.jpg');
+  background-image: url('imagenes/Portada v2.jpg');
   background-size: cover;
 }
 
