--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ html{
     box-sizing: border-box;
 }
 
-h1{color:white;
-   font-size: 50px;
-   font-weight: bold;
+h1{color:rgb(0, 0, 0);
+   font-size: 60px;
+   font-weight:bold;
    /* background-color: #FF7F50;*/
    text-align: center;
    font-family: Dancing Script;
@@ -29,7 +29,7 @@ h1{color:white;
   }
 }
 header{
-  background-image: url('imagenes/Portadav2.jpeg');
+  background-image: url('imagenes/Portadav3.jpeg');
   background-size: cover;
 }
 
