--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1{color:rgb(0, 0, 0);
   }
 }
 header{
-  background-image: url('imagenes/Portadav2.svg');
+  background-image: url('imagenes/Portadav2.jpg');
   background-size: cover;
 }
 
