--- a/style.css
+++ b/style.css
@@ -47,28 +47,30 @@ header{
 #barra_nav li {
   text-align: center;
   border: 1px solid blue;
-  background-color: lightblue;
+  background-color: rgb(1, 255, 1);
   padding: 10px;
 }
 
 @media (min-width: 768px) {
   #barra_nav {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
   }
 }
 
 
 #bienvenida{
+  font-size:larger;
   background-color:#8FBC8F ;
   text-align: justify;
   font-weight: 700;
   padding: 2%; 
   margin: 20px;
   font-family:'Handlee', cursive;
+  border: 2px solid black; /* Agrega un borde negro de 2 píxeles */
 }
 #navegacion{
-  background-color: #00FFFF;
+  background-color: #f38ddd;
   font-family: Handlee;
   font-weight: 700;
   text-align: center;
@@ -99,6 +101,9 @@ header{
     #navegacion #barra_nav li>a{
       text-decoration: none;
     }
+
+
+    
 
 .grid-container {
     display: grid;
