--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap');
 
 html{
-  background-color: #7cf171;
+  background-color: #4f78e7;
   scroll-behavior:smooth;
 }
 
@@ -118,7 +119,7 @@ header{
     width: 100%;
     height: 100px;
     background-color: lightblue;
-    border: 1px solid blue;
+    border: 1px solid rgb(1, 1, 12);
     text-align: center;
     line-height: 100px;
 }
@@ -126,22 +127,29 @@ header{
 .caja1 {
   background-image: url('imagenes/dieta-equilibrada-plato-completo-y-sano.jpg');
   background-color: lightblue; /* Un fondo de color para caja 1 */
-  font-size:x-large;
+  font-family: 'Kalam', cursive;
+  font-size: x-large;
 }
 
 .caja2 {
   background-image: url('imagenes/date_un_gusto.jpg');
   background-color: lightblue; /* Un fondo de color para caja 2 */
+  font-family: 'Kalam', cursive;
+  font-size: x-large;
 }
 
 .caja3 {
   background-image: url('ruta_de_tu_imagen3.jpg');
   background-color: lightblue; /* Un fondo de color para caja 3 */
+  font-family: 'Kalam', cursive;
+  font-size: x-large;
 }
 
 .caja4 {
   background-image: url('ruta_de_tu_imagen4.jpg');
   background-color: lightblue; /* Un fondo de color para caja 4 */
+  font-family: 'Kalam', cursive;
+  font-size: x-large;
 }
 
 @media (min-width: 768px) {
