--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap');
 
+
+
 html{
   background-color: #4f78e7;
   scroll-behavior:smooth;
@@ -58,6 +60,16 @@ header{
     grid-auto-rows: auto;
   }
 }
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 
 
 #bienvenida{
