modificado:     index.html 	modificado:     style.css

--- a/style.css
+++ b/style.css
@@ -189,6 +189,17 @@ header{
   }
 }
 
-/* Elimina el subrayado solo de los enlaces con la clase "no-subrayar" */
+.ft{
+  font-size:larger;
+  background-image:url('imagenes/fondo.jpg') ;
+  background-color:#6ee66e ;
+  text-align: justify;
+  font-weight: 700;
+  padding: 2%; 
+  margin: 20px;
+  font-family:'Handlee', cursive;
+  border: 2px solid black; /* Agrega un borde negro de 2 píxeles */
+
+}
 
 
