--- a/style.css
+++ b/style.css
@@ -122,8 +122,8 @@ header{
     display: grid;
     grid-gap: 10px;
 
-    margin: 0 auto; /* Agrega un margen horizontal centrado en la página */
-    max-width: 1200px; /* Establece un ancho máximo para el contenedor */
+    margin: 0 auto; /* Margen horizontal centrado en la página */
+    max-width: 1200px; /* Ancho máximo para el contenedor */
     padding: 0 20px; /* Agrega espacio entre el contenido y el margen de la página */
 }
 
@@ -152,7 +152,7 @@ header{
   background-image: url('imagenes/dieta-equilibrada-plato-completo-y-sano.jpg');
   background-color: lightblue; /* Un fondo de color para caja 1 */
   font-family: 'Kalam', cursive;
-  font-size: x-large;
+  /*font-size: x-large;*/
 }
 
 
@@ -160,21 +160,21 @@ header{
   background-image: url('imagenes/date_un_gusto.jpg');
   background-color: lightblue; /* Un fondo de color para caja 2 */
   font-family: 'Kalam', cursive;
-  font-size: x-large;
+  /*font-size: x-large;*/
 }
 
 .caja3 {
   background-image: url('ruta_de_tu_imagen3.jpg');
   background-color: lightblue; /* Un fondo de color para caja 3 */
   font-family: 'Kalam', cursive;
-  font-size: x-large;
+  font-size: /*x-large*/;
 }
 
 .caja4 {
   background-image: url('ruta_de_tu_imagen4.jpg');
   background-color: lightblue; /* Un fondo de color para caja 4 */
   font-family: 'Kalam', cursive;
-  font-size: x-large;
+  font-size: /*x-large;*/
 }
 
 @media (min-width: 768px) {
