--- a/busqueda.css
+++ b/busqueda.css
@@ -35,6 +35,14 @@ h1 {
     border-radius: 5px;
 }
 
+@media (max-width: 767px) {
+    #query {
+        width: 100%;
+        box-sizing: border-box; /* Asegura que el padding y el borde estén incluidos en el ancho del elemento */
+    }
+}
+
+
 button {
     background-color: lightblue;
     color: #111111;
