--- a/busqueda.css
+++ b/busqueda.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap');
 
-
-
 body {
     background-color: #4f78e7;
     font-family: Arial, sans-serif;
@@ -19,7 +17,6 @@ h1 {
     margin: 0;
     font-family: 'Kalam', cursive;
     border: 2px solid black;
-
 }
 
 #formulario_busqueda {
@@ -29,12 +26,18 @@ h1 {
 
 #query {
     padding: 10px;
-    width: 100%;
+    width: 300px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
 
+@media (max-width: 767px) {
+    #query {
+        width: 100%;
+        box-sizing: border-box;
+    }
+}
 
 button {
     background-color: lightblue;
@@ -52,16 +55,15 @@ button:hover {
 
 #results {
     margin: 20px;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 10px;
     justify-content: center;
 }
 
 .recipe {
     border: 1px solid #ccc;
     padding: 10px;
-    margin: 10px;
-    width: 250px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -114,32 +116,5 @@ button:hover {
 
 #volver_a_inicio:hover {
     background-color: rgb(138, 185, 201);
-}
-
-/* Consulta de medios para dispositivos móviles */
-@media (max-width: 767px) {
-    h1 {
-        font-size: 60px; /* Reducir el tamaño de fuente del título en dispositivos móviles */
-    }
-
-    #query {
-        width: 100%;
-        box-sizing: border-box; /* Asegura que el padding y el borde estén incluidos en el ancho del elemento */
-    }
-
-    .recipe {
-        width: 100%; /* Hacer que las recetas ocupen todo el ancho en dispositivos móviles */
-        margin: 10px 0; /* Agregar un espacio entre las recetas en dispositivos móviles */
-    }
-
-    #volver_a_inicio {
-        font-size: 14px; /* Reducir el tamaño del botón de regreso en dispositivos móviles */
-        padding: 8px 16px; /* Ajustar el padding del botón de regreso en dispositivos móviles */
-    }
-
-    /* Añadir un estilo para que los resultados se muestren en una única columna */
-    #results {
-        display: block;
-    }
 }
 
