--- a/busqueda.css
+++ b/busqueda.css
@@ -30,13 +30,7 @@ h1 {
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
-
-@media (max-width: 767px) {
-    #query {
-        width: 100%;
-        box-sizing: border-box;
-    }
+    margin-right: 10px; /* Espacio entre el campo de búsqueda y el botón */
 }
 
 button {
@@ -56,9 +50,8 @@ button:hover {
 #results {
     margin: 20px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 10px;
-    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Cuadrícula adaptable */
+    grid-gap: 20px; /* Espacio entre las recetas */
 }
 
 .recipe {
@@ -117,4 +110,22 @@ button:hover {
 #volver_a_inicio:hover {
     background-color: rgb(138, 185, 201);
 }
+
+/* Consulta de medios para dispositivos móviles */
+@media (max-width: 767px) {
+    h1 {
+        font-size: 30px; /* Reducir el tamaño de fuente del título en dispositivos móviles */
+    }
+
+    #query {
+        width: 100%;
+        box-sizing: border-box;
+        margin-right: 0; /* Eliminar el espacio entre el campo de búsqueda y el botón en dispositivos móviles */
+    }
+
+    #results {
+        grid-template-columns: 1fr; /* Una sola columna en dispositivos móviles */
+    }
+}
+
 
