--- a/plato_del_dia.css
+++ b/plato_del_dia.css
@@ -1,7 +1,7 @@
 /* Estilo para el cuerpo de la página */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: #f0f0f0;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -19,6 +19,7 @@ h1 {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px;
 }
 
 /* Estilo para los enlaces */
@@ -50,11 +51,7 @@ li {
     }
     #recipe-container {
         padding: 10px;
+        margin: 10px;
     }
 }
 
-/* Estilo para imágenes */
-img {
-    max-width: 100%;
-    height: auto;
-}
