--- a/busqueda.css
+++ b/busqueda.css
@@ -69,6 +69,7 @@ button:hover {
     max-width: 100%;
     height: auto;
     border-radius: 5px 5px 0 0;
+    margin: 0 auto; /* Centra la imagen horizontalmente */
 }
 
 .recipe h3 {
