--- a/busqueda.css
+++ b/busqueda.css
@@ -40,6 +40,15 @@ h1 {
   margin-right: 10px; /* Espacio entre el campo de búsqueda y el botón */
 }
 
+@media (max-width: 767px) {
+    
+    #query {
+        width: 100%; /* Make the search input span the full width */
+        padding: 15px;
+        font-size: 20px;
+    }
+}
+
 /* Search button */
 button {
   background-color: lightblue;
@@ -51,16 +60,25 @@ button {
   border-radius: 5px;
 }
 
+@media (max-width: 767px) {
+    button {
+        padding: 15px 30px;
+        font-size: 20px;
+    }
+}
+
 /* Results grid */
 #results {
-  margin: 20px;
   display: grid;
-  grid-template-areas:
-    'heading heading'
-    'search-form search-form'
-    'results results';
-  grid-template-columns: 1fr;
+  margin: 20px;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 20px; /* Espacio entre las recetas */
+}
+
+@media (max-width: 767px) {
+    #results {
+        grid-template-columns: 1fr; /* Single column layout on small screens */
+    }
 }
 
 
@@ -124,20 +142,7 @@ button {
 }
 
 
-@@media (max-width: 767px) {
-    #results {
-        grid-template-columns: 1fr; /* Single column layout on small screens */
-    }
-    #query {
-        width: 100%; /* Make the search input span the full width */
-        padding: 15px;
-        font-size: 20px;
-    }
-    button {
-        padding: 15px 30px;
-        font-size: 20px;
-    }
-}
+
 
 
 
